k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api-excel-compare-ingress
  annotations:
    # Add other annotations as needed, for example, for SSL/TLS:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/ssl-redirect: "false" # if you don't want to force https
spec:
  ingressClassName: nginx # Replaces the kubernetes.io/ingress.class annotation
  rules:
  - host: aum-excel.skill-wanderer.com 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fast-api-excel-compare-svc
            port:
              number: 80
